--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,9 @@ bower_components/
 build/
 dist/
 maps/
-assets/other/
+app/assets/other/
 
 # Other #
 #####################
 semantic.json
-semantic/
+app/semantic/
